# local-ai-agent-mlx

./: .gitignore  README.md  context_test.py  find_model.py  monitor.py  pyproject.toml  setup.sh  start.py
.github/agents/: local-ai-setup.agent.md  mlx-model-finder.agent.md
